ChangeLog for Simple Chat Client
========================= 

Version 1.7.0 (unknown)
================================
* Faster reconnect after wrong login
* Added auto away turn off button
* Added commands description
* Added ctrl+shift arround
* Changed reconnect from 30 sec to 120 sec
* Changed reconnect without closing channels
* Fixed offline messages layout
* Fixed moderation
* Many bugfixes

Version 1.6.2 (04.12.2012)
================================
* Fixed auth
* Fixed edit profile

Version 1.6.1 (30.10.2012)
================================
* Fixed rank

Version 1.6.0 (29.10.2012)
================================
* Addded rank
* Added new emoticons
* Updated layouts
* Added remember last 30 messages
* Added commands /raw /all /query /quote /kban /kbanip
* Many bugfixes

Version 1.5.0 (17.07.2012)
================================
* Added find nick
* Changed channel settings layout
* Added tray notification
* Added punish reason
* Added channel avatars
* Added debug window
* Many bugfixes

Version 1.4.0 (10.03.2012)
================================
* Added avatars support
* Added minimize to tray
* Movable tabs
* Added highlight
* Added copy link to clipboard
* Enabled DEP (permanent) and ASLR on windows
* Many bugfixes

Version 1.1.3 (05.12.2011)
================================
* Fixed priv logs
* Added themes
* Added youtube player
* Added reverse colors
* Added find text
* Many bugfixes

Version 1.1.2 (10.09.2011)
================================
* Animated emoticons work again
* Removed embedded styles
* Removed find text dialog
* Fixed cycle command
* Fixed bug in connect
* Fixed reconnecting
* Removed detect already running
* Fixed detect kamerzysta
* Fixed linux webcam refresh
* Many bugfixes

Version 1.1.1 (21.07.2011)
================================
* Added profiles
* New crypt
* Many bugfixes

Version 1.1.0 (09.07.2011)
================================
* Added /mp3 command
* Fixed update
* Many bugfixes

Version 1.0.13 (30.06.2011)