@@ -121,5 +121,6 @@
         <file>images/oxygen/16x16/im-user.png</file>
         <file>images/logo16x16.gif</file>
         <file>images/oxygen/16x16/applications-system.png</file>
+        <file>images/oxygen/16x16/view-presentation.png</file>
     </qresource>
 </RCC>
