@@ -211,7 +211,11 @@
            </spacer>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox_themes"/>
+           <widget class="QPushButton" name="pushButton_themes">
+            <property name="text">
+             <string>Themes</string>
+            </property>
+           </widget>
           </item>
           <item>
            <spacer name="horizontalSpacer_3">
